# lekiwi-control-center

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  TRANSFORMATION_PLAN.md  pyproject.toml
config/: robot.yaml
examples/: client.py  test_endpoints.sh
scripts/: start_server.sh
src/lekiwi_control/: __init__.py
src/lekiwi_control/api/: __init__.py  dependencies.py  main.py  models.py
src/lekiwi_control/api/routes/: __init__.py  cameras.py  health.py  motors.py  robot.py
src/lekiwi_control/cameras/: __init__.py  configs.py  utils.py
src/lekiwi_control/cameras/opencv/: camera_opencv.py  configuration_opencv.py
src/lekiwi_control/motors/: encoding_utils.py  motors_bus.py
src/lekiwi_control/motors/feetech/: feetech.py
src/lekiwi_control/robot/: __init__.py  config.py  lekiwi.py
src/lekiwi_control/utils/: __init__.py  terminal_utils.py
static/: control.html
systemd/: lekiwi-control.service
