[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lekiwi-control-center"
version = "1.0.0"
description = "REST API control center for LeKiwi robot on Raspberry Pi"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Leonid", email = "leonid@example.com" },
]
keywords = ["lekiwi", "robotics", "fastapi", "raspberry-pi"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",

    # Core dependencies
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pyserial>=3.5",
    "deepdiff>=7.0.1",  # For motor bus configuration comparison
    "tqdm>=4.66.0",  # For motor bus progress bars

    # Motor control
    "feetech-servo-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "httpx>=0.25.0",  # for testing FastAPI
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
lekiwi-server = "lekiwi_control.api.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lekiwi_control"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
